--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
-	<link rel="stylesheet" href="https://unpkg.com/98.css">
+	<link rel="stylesheet" href="/vendor/98.css/98.css">
 	<link rel="stylesheet" href="/build/bundle.css">
 
 	<script defer src='/build/bundle.js'></script>
